--- a/index-default-icons.html
+++ b/index-default-icons.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <title>Weather App</title>
+  <link href="favicon.ico" rel="icon" type="image/x-icon" />
   <link rel="stylesheet" href="css/style-1.css">
   <link href="owfont-master/css/owfont-regular.css" rel="stylesheet" type="text/css">
   <!-- material design lite stuff next three lines -->
