added favicon link

--- a/index.html
+++ b/index.html
@@ -1,38 +1,52 @@
 <!DOCTYPE html>
-<html >
-    <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset="UTF-8">
-        <title>Weather App</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link href="owfont-master/css/owfont-regular.css" rel="stylesheet" type="text/css">
-        <!-- material design lite stuff next three lines -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
-        <!-- theme -->
-        <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.green-purple.min.css" />
-        <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-        <script src='https://code.getmdl.io/1.1.3/material.min.js'></script>
-        <script src="js/index.js"></script>
-      </head>
+<html>
 
-  <body>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Weather App</title>
+  <link href="favicon.ico" rel="icon" type="image/x-icon" />
+  <link rel="stylesheet" href="css/style.css">
+  <link href="owfont-master/css/owfont-regular.css" rel="stylesheet" type="text/css">
+  <!-- material design lite stuff next three lines -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
+  <!-- theme -->
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.green-purple.min.css" />
+  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+  <script src='https://code.getmdl.io/1.1.3/material.min.js'></script>
+  <script src="js/index.js"></script>
+</head>
+
+<body>
   <div class="demo-card-wide mdl-card mdl-shadow--2dp">
-    <div id = "titleblock">
-      <p id ="toptitle"><b>weather</b>buddy</p>
-      <p id = "subtitle">a fair weather friend</p>
+    <div id="titleblock">
+      <p id="toptitle"><b>weather</b>buddy</p>
+      <p id="subtitle">a fair weather friend</p>
     </div>
-  <div id = "cardcontents" class="mdl-card__supporting-text">
-    <center>
-      <i id = "weathericon" class ="owf owf-950"></i>
-      <p id = "weather">Loading</p>
+    <div id="cardcontents" class="mdl-card__supporting-text">
+      <center>
+        <i id="weathericon" class="owf owf-800"></i>
+        <p><span id="weather">Loading</span></p>
 
-      <br>
-      <p id = "temp">....</p>
-      
-       <p id ="demo">Loading</p>
-      </div>
+        <br>
+        <p><span id="temp"></span></p>
+
+        <p><strong id="demo">Loading</strong></p>
+    </div>
     </center>
-   </div>
-  </body>
- </html>
+  </div>
+
+  <!--  additional options taken from experimentation
+  <div id="liveWeather" class="w3-center">
+    Feeling like:<span id="feels"></span>
+    <em>
+      Enjoy the rest of your <span id="day_part"></span>!
+    </em>
+    <span id="icon"></span>
+  </div> 
+    
+     -->
+</body>
+
+</html>
